apps/base/media/navidrome.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
  labels: { app: navidrome }
spec:
  replicas: 1
  strategy: { type: Recreate }
  selector: { matchLabels: { app: navidrome } }
  template:
    metadata: { labels: { app: navidrome } }
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.2
          ports: [ { containerPort: 4533 } ]
          volumeMounts:
            - { name: data, mountPath: /data }
            - { name: music, mountPath: /music, readOnly: true, subPath: library/music }
          resources:
            requests: { memory: "128Mi", cpu: "50m" }
            limits: { memory: "1Gi", cpu: "1000m" }
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: navidrome-data }
        - name: music
          persistentVolumeClaim: { claimName: media-data }
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
spec:
  selector: { app: navidrome }
  ports: [ { port: 4533, targetPort: 4533 } ]
